# el

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  btstack_config.h  bunfig.toml  deploy.sh  drizzle.config.ts  ecoflow-grid-monitor.service  flash.sh  index.ts  lwipopts.h  mbedtls_config.h  package.json  todo.md  tsconfig.json
drizzle/: 0000_acoustic_kang.sql  0001_loose_anthem.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
pico/: CMakeLists.txt  Makefile  lwipopts.h  main.c
src/: ble.c  ble.h  ble.ts  crypto.c  crypto.h  crypto.ts  ecdh.c  keydata.c  keydata.h  main.c  prediction.test.ts  prediction.ts  protocol.c  protocol.h  protocol.ts  server.ts
src/db/: index.ts  schema.ts
src/pages/: home.tsx  layout.tsx
